@@ -1,3 +1,9 @@
+2009-11-06  Jan Kratochvil  <jan.kratochvil@redhat.com>
+	    Joel Brobecker  <brobecker@adacore.com>
+	    Paolo Bonzini  <bonzini@gnu.org>
+
+	* largefile.m4: New file.
+
 2009-10-23  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* acx.m4 (ACX_CHECK_CYGWIN_CAT_WORKS): Use = with test.
